ecmascript/parser/tests/test262-error-references/fail/369676814db0cbbf.js.stderr
error: Expected ,, got .
 --> $DIR/tests/test262-parser/fail/369676814db0cbbf.js:1:14
  |
1 | ({set a({e: a.b}){}})
  |              ^

